style(frontend): fix menu horizontal alignment

--- a/frontend/reactfrontend/src/App.css
+++ b/frontend/reactfrontend/src/App.css
@@ -4,6 +4,11 @@
 .Navigation {
   display: flex;
 }
+.Menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
 .Navigation ul {
   list-style: none;
   margin: 0;
